{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 71,
  "lineage": "c54d2106-158e-8983-7c8e-ab11072774bb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shopeasy_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:internet-gateway/igw-0fd0ed77753eecdf3",
            "id": "igw-0fd0ed77753eecdf3",
            "owner_id": "984445750763",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-igw"
            },
            "tags_all": {
              "Name": "shopeasy-igw"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "igw-0fd0ed77753eecdf3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "shopeasy_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:loadbalancer/app/shopeasy-alb/b682fccb350c25f2",
            "arn_suffix": "app/shopeasy-alb/b682fccb350c25f2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "shopeasy-alb-1488240479.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:984445750763:loadbalancer/app/shopeasy-alb/b682fccb350c25f2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shopeasy-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-00bb3b390386f7065"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0054d55430f8b4731"
              },
              {
                "subnet_id": "subnet-0e3cc0e59ff26597d"
              }
            ],
            "subnets": [
              "subnet-0054d55430f8b4731",
              "subnet-0e3cc0e59ff26597d"
            ],
            "tags": {
              "Name": "shopeasy-alb"
            },
            "tags_all": {
              "Name": "shopeasy-alb"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:loadbalancer/app/shopeasy-alb/b682fccb350c25f2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:listener/app/shopeasy-alb/b682fccb350c25f2/d00aedc4d1be99d4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:targetgroup/shopeasy-tg/9ea71eb87cf403e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:984445750763:listener/app/shopeasy-alb/b682fccb350c25f2/d00aedc4d1be99d4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:loadbalancer/app/shopeasy-alb/b682fccb350c25f2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:listener/app/shopeasy-alb/b682fccb350c25f2/d00aedc4d1be99d4"
          },
          "dependencies": [
            "aws_lb.shopeasy_alb",
            "aws_lb_target_group.shopeasy_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:listener/app/shopeasy-alb/b682fccb350c25f2/e6804cc34484b451",
            "certificate_arn": "arn:aws:acm:us-east-1:984445750763:certificate/81ee4bde-997c-4748-9840-d1d048c2f65d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:targetgroup/shopeasy-tg/9ea71eb87cf403e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:984445750763:listener/app/shopeasy-alb/b682fccb350c25f2/e6804cc34484b451",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:loadbalancer/app/shopeasy-alb/b682fccb350c25f2",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:listener/app/shopeasy-alb/b682fccb350c25f2/e6804cc34484b451"
          },
          "dependencies": [
            "aws_acm_certificate.shopeasy_cert",
            "aws_lb.shopeasy_alb",
            "aws_lb_target_group.shopeasy_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available",
            "tls_private_key.shopeasy_tls_key",
            "tls_self_signed_cert.shopeasy_tls_cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "shopeasy_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:targetgroup/shopeasy-tg/9ea71eb87cf403e3",
            "arn_suffix": "targetgroup/shopeasy-tg/9ea71eb87cf403e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:984445750763:targetgroup/shopeasy-tg/9ea71eb87cf403e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:984445750763:loadbalancer/app/shopeasy-alb/b682fccb350c25f2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "shopeasy-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "shopeasy-target-group"
            },
            "tags_all": {
              "Name": "shopeasy-target-group"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:984445750763:targetgroup/shopeasy-tg/9ea71eb87cf403e3"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_app_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:network-acl/acl-0fe7eb1f66cbbd8eb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fe7eb1f66cbbd8eb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "984445750763",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-068764bb3f1bc9f81",
              "subnet-0ebe2cd1bffadafc2"
            ],
            "tags": {
              "Name": "shopeasy-private-app-nacl"
            },
            "tags_all": {
              "Name": "shopeasy-private-app-nacl"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_app_az1",
            "aws_subnet.private_app_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_db_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:network-acl/acl-082aa61744cc149cc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-082aa61744cc149cc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "984445750763",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0beade8c8ef6b85eb",
              "subnet-0c15722a6c6fd80de"
            ],
            "tags": {
              "Name": "shopeasy-private-db-nacl"
            },
            "tags_all": {
              "Name": "shopeasy-private-db-nacl"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private_db_az1",
            "aws_subnet.private_db_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:network-acl/acl-0d5d8f6ed2bd1c997",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d5d8f6ed2bd1c997",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "984445750763",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0054d55430f8b4731",
              "subnet-0e3cc0e59ff26597d"
            ],
            "tags": {
              "Name": "shopeasy-public-nacl"
            },
            "tags_all": {
              "Name": "shopeasy-public-nacl"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public_az1",
            "aws_subnet.public_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:route-table/rtb-0f8deccacafd5d426",
            "id": "rtb-0f8deccacafd5d426",
            "owner_id": "984445750763",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "shopeasy-private-route-table"
            },
            "tags_all": {
              "Name": "shopeasy-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtb-0f8deccacafd5d426",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:route-table/rtb-0c48b4e83479ca8f5",
            "id": "rtb-0c48b4e83479ca8f5",
            "owner_id": "984445750763",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd0ed77753eecdf3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopeasy-public-route-table"
            },
            "tags_all": {
              "Name": "shopeasy-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtb-0c48b4e83479ca8f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.shopeasy_igw",
            "aws_vpc.shopeasy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_az1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db7a5874b5028745",
            "region": "us-east-1",
            "route_table_id": "rtb-0f8deccacafd5d426",
            "subnet_id": "subnet-068764bb3f1bc9f81"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtbassoc-0db7a5874b5028745",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_app_az1",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_az2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0632907305bf895ee",
            "region": "us-east-1",
            "route_table_id": "rtb-0f8deccacafd5d426",
            "subnet_id": "subnet-0ebe2cd1bffadafc2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtbassoc-0632907305bf895ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_app_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_az1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c90cacf72314409",
            "region": "us-east-1",
            "route_table_id": "rtb-0f8deccacafd5d426",
            "subnet_id": "subnet-0beade8c8ef6b85eb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtbassoc-02c90cacf72314409",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_db_az1",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_az2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f6fd43edc5e6824",
            "region": "us-east-1",
            "route_table_id": "rtb-0f8deccacafd5d426",
            "subnet_id": "subnet-0c15722a6c6fd80de"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtbassoc-04f6fd43edc5e6824",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_db_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8b17ac33d663f64",
            "region": "us-east-1",
            "route_table_id": "rtb-0c48b4e83479ca8f5",
            "subnet_id": "subnet-0054d55430f8b4731"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtbassoc-0e8b17ac33d663f64",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.shopeasy_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_az1",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d1a17985a3d5844",
            "region": "us-east-1",
            "route_table_id": "rtb-0c48b4e83479ca8f5",
            "subnet_id": "subnet-0e3cc0e59ff26597d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "rtbassoc-09d1a17985a3d5844",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.shopeasy_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_az2",
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:security-group/sg-00bb3b390386f7065",
            "description": "Allow HTTP and HTTPS traffic from the internet to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bb3b390386f7065",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet for testing or redirect",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "shopeasy-alb-sg",
            "name_prefix": "",
            "owner_id": "984445750763",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopeasy-alb-sg"
            },
            "tags_all": {
              "Name": "shopeasy-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "sg-00bb3b390386f7065",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:security-group/sg-0b7e6af80455d94b0",
            "description": "Allow app traffic only from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from EC2 app servers",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7e6af80455d94b0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP app traffic only from ALB security group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bb3b390386f7065"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shopeasy-ec2-sg",
            "name_prefix": "",
            "owner_id": "984445750763",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopeasy-ec2-sg"
            },
            "tags_all": {
              "Name": "shopeasy-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "sg-0b7e6af80455d94b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.shopeasy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:security-group/sg-049cab4a326d5d2a9",
            "description": "Allow MySQL access only from EC2 app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow outbound traffic from RDS",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049cab4a326d5d2a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL only from EC2 security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7e6af80455d94b0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "shopeasy-rds-sg",
            "name_prefix": "",
            "owner_id": "984445750763",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shopeasy-rds-sg"
            },
            "tags_all": {
              "Name": "shopeasy-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "sg-049cab4a326d5d2a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.shopeasy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:subnet/subnet-068764bb3f1bc9f81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068764bb3f1bc9f81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984445750763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-private-app-subnet-az1"
            },
            "tags_all": {
              "Name": "shopeasy-private-app-subnet-az1"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "subnet-068764bb3f1bc9f81",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:subnet/subnet-0ebe2cd1bffadafc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebe2cd1bffadafc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984445750763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-private-app-subnet-az2"
            },
            "tags_all": {
              "Name": "shopeasy-private-app-subnet-az2"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "subnet-0ebe2cd1bffadafc2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:subnet/subnet-0beade8c8ef6b85eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beade8c8ef6b85eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984445750763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-private-db-subnet-az1"
            },
            "tags_all": {
              "Name": "shopeasy-private-db-subnet-az1"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "subnet-0beade8c8ef6b85eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:subnet/subnet-0c15722a6c6fd80de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c15722a6c6fd80de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984445750763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-private-db-subnet-az2"
            },
            "tags_all": {
              "Name": "shopeasy-private-db-subnet-az2"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "subnet-0c15722a6c6fd80de",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:subnet/subnet-0054d55430f8b4731",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0054d55430f8b4731",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984445750763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-public-subnet-az1"
            },
            "tags_all": {
              "Name": "shopeasy-public-subnet-az1"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "subnet-0054d55430f8b4731",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:subnet/subnet-0e3cc0e59ff26597d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3cc0e59ff26597d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984445750763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-public-subnet-az2"
            },
            "tags_all": {
              "Name": "shopeasy-public-subnet-az2"
            },
            "vpc_id": "vpc-01f3a99f78d64b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "subnet-0e3cc0e59ff26597d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.shopeasy_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shopeasy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:984445750763:vpc/vpc-01f3a99f78d64b8d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ad5d176913d467f1",
            "default_route_table_id": "rtb-06818f819f882240e",
            "default_security_group_id": "sg-0b18c6c600a045b81",
            "dhcp_options_id": "dopt-06bac75d3d7286606",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f3a99f78d64b8d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06818f819f882240e",
            "owner_id": "984445750763",
            "region": "us-east-1",
            "tags": {
              "Name": "shopeasy-vpc"
            },
            "tags_all": {
              "Name": "shopeasy-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "984445750763",
            "id": "vpc-01f3a99f78d64b8d3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}